[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/shared/input/PlayerInput.gd" type="Script" id=1]
[ext_resource path="res://src/machine/SoulessMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/machine/robot/tracks.png" type="Texture" id=3]
[ext_resource path="res://src/shared/StateMachine/SimpleMove2D.gd" type="Script" id=4]
[ext_resource path="res://src/machine/FlickArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/machine/robot/Robot.gd" type="Script" id=6]
[ext_resource path="res://src/shared/StateMachine/Gravity2D.gd" type="Script" id=7]
[ext_resource path="res://src/shared/misc/TurnMotion2D.gd" type="Script" id=8]
[ext_resource path="res://src/machine/robot/robotRed.png" type="Texture" id=9]
[ext_resource path="res://src/machine/robot/robot-move.tres" type="AudioStream" id=10]
[ext_resource path="res://src/machine/robot/robot-online.wav" type="AudioStream" id=11]
[ext_resource path="res://src/shared/sound/VelocitySound.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprites/TrackFront:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprites/TrackBack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Sprites/Node2D/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -50 ), Vector2( -40, -45 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/Sprites/Node2D/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/Sprites/Node2D/Body:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Offline"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprites/Node2D/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -50 ), Vector2( -40, -30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprites/Node2D/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Sprites/Node2D/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OnlineSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Online"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprites/Node2D/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -30 ), Vector2( -40, -50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprites/Node2D/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Sprites/Node2D/Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.666667, 0.666667, 0.666667, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OnlineSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprites/Node2D/Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.666667, 0.666667, 0.666667, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprites/Node2D/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Sprites/Node2D/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -40, -30 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 87.419, 70.0777 )

[sub_resource type="CircleShape2D" id=6]
radius = 39.7851

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48.7497, 39.1803 )

[node name="RobotRed" type="KinematicBody2D"]
collision_layer = 128
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Move = SubResource( 1 )
anims/Offline = SubResource( 2 )
anims/Online = SubResource( 3 )
anims/Start = SubResource( 4 )

[node name="Body" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 5 )

[node name="Sprites" type="Node2D" parent="Body"]
position = Vector2( 40, 41.7593 )

[node name="TrackBack" type="Sprite" parent="Body/Sprites"]
texture = ExtResource( 3 )
hframes = 2

[node name="Node2D" type="Node2D" parent="Body/Sprites"]

[node name="Body" type="Sprite" parent="Body/Sprites/Node2D"]
modulate = Color( 0.666667, 0.666667, 0.666667, 1 )
position = Vector2( -40, -30 )
texture = ExtResource( 9 )
hframes = 2
frame = 1

[node name="TrackFront" type="Sprite" parent="Body/Sprites"]
position = Vector2( -80, 0 )
texture = ExtResource( 3 )
hframes = 2

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 1 )

[node name="SimpleMove2D" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Gravity2D" type="Node" parent="."]
script = ExtResource( 7 )

[node name="TurnMotion2D" type="Node" parent="."]
script = ExtResource( 8 )
node_path = NodePath("../Body")

[node name="FlickArea" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlickArea"]
shape = SubResource( 6 )

[node name="SoulessMachine" parent="." instance=ExtResource( 2 )]
flick_path = NodePath("../FlickArea")
anim_path = NodePath("../AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoulessMachine"]
shape = SubResource( 7 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"
script = ExtResource( 12 )
max_db = -20
min_db = -30

[node name="OnlineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
bus = "SFX"
